crates/test-ui/ui/mutable_id_not_clone_not_retain.stderr
error[E0599]: the method `clone` exists for struct `Retained<NSMutableObject>`, but its trait bounds were not satisfied
 --> ui/mutable_id_not_clone_not_retain.rs
  |
  | / extern_class!(
  | |     struct NSMutableObject;
  | |
  | |     unsafe impl ClassType for NSMutableObject {
... |
  | |     }
  | | );
  | |_- doesn't satisfy `NSMutableObject: IsIdCloneable`
...
  |       let _ = obj.clone();
  |                   ^^^^^ method cannot be called on `Retained<NSMutableObject>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/crates/objc2/src/rc/id.rs
  |
  |   pub struct Retained<T: ?Sized> {
  |   ------------------------------ doesn't satisfy `Retained<NSMutableObject>: Clone`
  |
  = note: the following trait bounds were not satisfied:
          `NSMutableObject: IsIdCloneable`
          which is required by `Retained<NSMutableObject>: Clone`
note: the trait `IsIdCloneable` must be implemented
 --> $WORKSPACE/crates/objc2/src/mutability.rs
  |
  | pub unsafe trait IsIdCloneable: private_traits::Sealed {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `clone`, perhaps you need to implement it:
          candidate #1: `Clone`

error[E0277]: the trait bound `Mutable: mutability::MutabilityIsRetainable` is not satisfied
 --> ui/mutable_id_not_clone_not_retain.rs
  |
  |     let _ = obj.retain();
  |                 ^^^^^^ the trait `mutability::MutabilityIsRetainable` is not implemented for `Mutable`, which is required by `NSMutableObject: IsRetainable`
  |
  = help: the following other types implement trait `mutability::MutabilityIsRetainable`:
            Immutable
            InteriorMutable
            InteriorMutableWithSubclass<S>
            InteriorMutableWithSuperclass<S>
            MainThreadOnly
  = note: required for `NSMutableObject` to implement `IsRetainable`
note: required by a bound in `retain`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  |     fn retain(&self) -> Retained<Self>
  |        ------ required by a bound in this associated function
  |     where
  |         Self: IsRetainable,
  |               ^^^^^^^^^^^^ required by this bound in `ClassType::retain`
